Fixed modal_window z-index for issue #21003

--- a/assets/stylesheets/modal_windows.css
+++ b/assets/stylesheets/modal_windows.css
@@ -2,7 +2,7 @@
   display: none;
   position: absolute;
   overflow: hidden;
-  z-index: 100;
+  z-index: 1100;
   padding: 10px 10px 10px 10px;
   margin: 0px 0px 0px 0px;
   background: white;
